<resources>
    <string-array name="english">
        <item name="app_name">Cruddy Pizza</item>
        <item name="main_title">Cruddy Pizza\nCurrent Orders</item>
        <item name="new_order">New Order</item>
        <item name="en_switch">EN</item>
        <item name="fr_switch">FR</item>
        <item name="size">Size</item>
        <item name="size_small">Small</item>
        <item name="size_med">Medium</item>
        <item name="size_lrg">Large</item>
        <item name="size_xlrg">X-Large</item>
        <item name="toppings">Toppings (Max 3)</item>
        <item name="topping_1">Cheese</item>
        <item name="topping_2">Sausage</item>
        <item name="topping_3">Pepperoni</item>
        <item name="topping_4">Ground Beef</item>
        <item name="topping_5">Bacon</item>
        <item name="topping_6">Donair</item>
        <item name="topping_7">Chicken</item>
        <item name="topping_8">Onions</item>
        <item name="topping_9">Mushrooms</item>
        <item name="topping_10">Jalapeno</item>
        <item name="topping_11">Peppers</item>
        <item name="topping_12">Anchovies</item>
        <item name="topping_13">Olives</item>
        <item name="topping_14">Broccoli</item>
        <item name="order_time">Order Time/Date</item>
        <item name="date">Order Date</item>
        <item name="time">Order Time</item>
        <item name="first_name">First Name</item>
        <item name="last_name">Last Name</item>
        <item name="address">Address</item>
        <item name="phone">Phone Number</item>
        <item name="cust_info">Customer Info</item>
        <item name="order_details">Order Details</item>
        <item name="edit_order">Edit Order</item>
        <item name="delete_order">Delete Order</item>
        <item name="back">Back To List</item>
        <item name="delete_title">ARE YOU SURE YOU WANT TO DELETE ORDER?</item>
        <item name="yes_delete">Yes, I\'m Sure</item>
        <item name="no_delete">No, Don\'t Delete</item>
        <item name="edit_title">Edit Order</item>
        <item name="update">Update Order</item>
        <item name="orderNo">Order #</item>
        <item name="cust_name">Customer Name</item>
        <item name="cust_address">Customer Address</item>
        <item name="cust_phone">Customer Phone Number</item>
    </string-array>
    <string-array name="french">
        <item name="app_name">Cruddy Pizza</item>
        <item name="main_title">Cruddy Pizza\nCommandes en cours</item>
        <item name="new_order">Nouvelle commande</item>
        <item name="en_switch">EN</item>
        <item name="fr_switch">FR</item>
        <item name="size">Taille</item>
        <item name="size_small">Petite</item>
        <item name="size_med">Moyen</item>
        <item name="size_lrg">Grande</item>
        <item name="size_xlrg">Tres-Grande</item>
        <item name="toppings">Garnitures (Max 3)</item>
        <item name="topping_1">Cheese</item>
        <item name="topping_2">Fromage</item>
        <item name="topping_3">Pepperoni</item>
        <item name="topping_4">Le bœuf haché</item>
        <item name="topping_5">Lard</item>
        <item name="topping_6">Donaire</item>
        <item name="topping_7">Poulette</item>
        <item name="topping_8">Oignons</item>
        <item name="topping_9">Champignons</item>
        <item name="topping_10">Jalapeno</item>
        <item name="topping_11">Poivrons</item>
        <item name="topping_12">Anchois</item>
        <item name="topping_13">Olives</item>
        <item name="topping_14">Brocoli</item>
        <item name="order_time">Heure/date de la commande</item>
        <item name="date">Date de commande</item>
        <item name="time">Temps de commande</item>
        <item name="first_name">Prénom</item>
        <item name="last_name">Nom de famille</item>
        <item name="address">Adresse</item>
        <item name="phone">Numéro de téléphone</item>
        <item name="cust_info">Informations concernant le client</item>
        <item name="order_details">Détails de la commande</item>
        <item name="edit_order">Modifier la commande</item>
        <item name="delete_order">Supprimer la commande</item>
        <item name="back">Retour à la liste</item>
        <item name="delete_title">ÊTES-VOUS SÛR DE VOULOIR SUPPRIMER LA COMMANDE ?</item>
        <item name="yes_delete">Oui, je suis sûr</item>
        <item name="no_delete">Non, ne supprimez pas</item>
        <item name="edit_title">Modifier la commande</item>
        <item name="update">Mise à jour de la commande</item>
        <item name="orderNo">Commande #</item>
        <item name="cust_name">Nom du client</item>
        <item name="cust_address">Adresse du client</item>
        <item name="cust_phone">Numéro de téléphone du client</item>
    </string-array>
    <string name="app_name">Cruddy Pizza</string>
    <string name="main_title">Cruddy Pizza\nCurrent Orders</string>
    <string name="new_order">New Order</string>
    <string name="en_switch">EN</string>
    <string name="fr_switch">FR</string>
    <string name="size">Size</string>
    <string name="size_small">Small</string>
    <string name="size_med">Medium</string>
    <string name="size_lrg">Large</string>
    <string name="size_xlrg">X-Large</string>
    <string name="toppings">Toppings (Max 3)</string>
    <string name="topping_1">Cheese</string>
    <string name="topping_2">Sausage</string>
    <string name="topping_3">Pepperoni</string>
    <string name="topping_4">Ground Beef</string>
    <string name="topping_5">Bacon</string>
    <string name="topping_6">Donair</string>
    <string name="topping_7">Chicken</string>
    <string name="topping_8">Onions</string>
    <string name="topping_9">Mushrooms</string>
    <string name="topping_10">Jalapeno</string>
    <string name="topping_11">Peppers</string>
    <string name="topping_12">Anchovies</string>
    <string name="topping_13">Olives</string>
    <string name="topping_14">Broccoli</string>
    <string name="order_time">Order Time/Date</string>
    <string name="date">Order Date</string>
    <string name="time">Order Time</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone Number</string>
    <string name="cust_info">Customer Info</string>
    <string name="order_details">Order Details</string>
    <string name="edit_order">Edit Order</string>
    <string name="delete_order">Delete Order</string>
    <string name="back">Back To List</string>
    <string name="delete_title">ARE YOU SURE YOU WANT TO DELETE ORDER?</string>
    <string name="yes_delete">Yes, I\'m Sure</string>
    <string name="no_delete">No, Don\'t Delete</string>
    <string name="edit_title">Edit Order</string>
    <string name="update">Update Order</string>
</resources>