<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditOrder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Switch
                    android:id="@+id/sw_lang"
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:checked="true"
                    android:showText="true"
                    android:textOff="@string/fr_switch"
                    android:textOn="@string/en_switch" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="25dp"
                android:background="@drawable/red_background_wshadow"
                android:gravity="center">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_createSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/btn_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:buttonTint="@color/white"
                            android:checked="true"
                            android:text="@string/size_small"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/btn_large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:buttonTint="@color/white"
                            android:text="@string/size_lrg"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/btn_medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:buttonTint="@color/white"
                            android:text="@string/size_med"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <RadioButton
                            android:id="@+id/btn_xlarge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="50"
                            android:buttonTint="@color/white"
                            android:text="@string/size_xlrg"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </TableRow>

                </RadioGroup>
            </TableRow>

            <TableLayout
                android:id="@+id/toppingSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="25dp"
                android:background="@drawable/red_background_tall"
                android:elevation="4dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/txt_createToppings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/toppings"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <CheckBox
                        android:id="@+id/chk_topping1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_1"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/chk_topping2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_2"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <CheckBox
                        android:id="@+id/chk_topping3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_3"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/chk_topping4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_4"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <CheckBox
                        android:id="@+id/chk_topping5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_5"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/chk_topping6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_6"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <CheckBox
                        android:id="@+id/chk_topping7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_7"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/chk_topping8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_8"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <CheckBox
                        android:id="@+id/chk_topping9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_9"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/chk_topping10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_10"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <CheckBox
                        android:id="@+id/chk_topping11"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_11"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/chk_topping12"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_12"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:weightSum="100">

                    <CheckBox
                        android:id="@+id/chk_topping13"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_13"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <CheckBox
                        android:id="@+id/chk_topping14"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:buttonTint="@color/white"
                        android:text="@string/topping_14"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="25dp"
                android:background="@drawable/red_background_tall"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_createCustInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cust_info"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="15dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp"
                        android:textColor="#000000"
                        android:textColorHint="#838383" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="15dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp"
                        android:textColor="#000000"
                        android:textColorHint="#838383" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTextAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:hint="@string/address"
                        android:inputType="textPostalAddress"
                        android:paddingLeft="5dp"
                        android:textColor="#000000"
                        android:textColorHint="#838383" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="15dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/editTextPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/edit_text"
                        android:ems="10"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:paddingLeft="5dp"
                        android:textColor="#000000"
                        android:textColorHint="#838383" />
                </TableRow>

            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_submitEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/red_button"
                    android:text="@string/update"
                    android:textColor="#FFFFFF"
                    app:backgroundTint="@null" />
            </TableRow>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>