<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeleteOrder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="100">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="right">

            <Switch
                android:id="@+id/sw_lang"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:checked="true"
                android:showText="true"
                android:textOff="@string/fr_switch"
                android:textOn="@string/en_switch" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <TextView
                android:id="@+id/txt_deleteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55">

            <ListView
                android:id="@+id/orderDetails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:layout_marginVertical="25dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center">

            <Button
                android:id="@+id/btn_yesDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:text="@string/yes_delete"
                android:textColor="@color/white"
                app:backgroundTint="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center">

            <Button
                android:id="@+id/btn_dontDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:text="@string/no_delete"
                android:textColor="@color/white"
                app:backgroundTint="@null" />
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>